@@ -10,4 +10,4 @@
 
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
 package ifneeded dns    1.0.4 [list source [file join $dir dns.tcl]]
-package ifneeded resolv 1.0   [list source [file join $dir resolv.tcl]]
+package ifneeded resolv 1.0.2 [list source [file join $dir resolv.tcl]]
